--- a/prop_conf/db.properties
+++ b/prop_conf/db.properties
@@ -3,6 +3,10 @@ urlDb.orc = jdbc:oracle:thin:@DEVCOTSDBO05-SCN.CORP.BI.GO.ID:1521/FMBDEV
 userDb.orc = WEBEAI
 passDb.orc = P@ssw0rd
 db.query = select asset_id, asset_name, currency, inst_type, TIME_TO_MATURITY, PRICE from msci_universe where get_date='2023-01-01'
+db.querySelect = select * from DM_TBL_TEST
 db.queryInsert = INSERT INTO DM_TBL_TEST (BOOK, ISIN, CLEAN_PRICE) VALUES (?, ?, ?)
+
+#csvFilePath=C:\Users\ptap2\Downloads\Book1.csv
+
 #DM_TBL_TEST
 #FileInputStream fis = new FileInputStream("prop_conf/db.properties");
