--- a/prop_conf/db.properties
+++ b/prop_conf/db.properties
@@ -6,7 +6,7 @@ db.query = select asset_id, asset_name, currency, inst_type, TIME_TO_MATURITY, P
 db.querySelect = select * from DM_TBL_TEST
 db.queryInsert = INSERT INTO DM_TBL_TEST (BOOK, ISIN, CLEAN_PRICE) VALUES (?, ?, ?)
 
-#csvFilePath=C:\Users\ptap2\Downloads\Book1.csv
+csvFilePath=C:\\Users\\ptap2\\Downloads\\Book1.csv
 
 #DM_TBL_TEST
 #FileInputStream fis = new FileInputStream("prop_conf/db.properties");
