--- a/prop_conf/db.properties
+++ b/prop_conf/db.properties
@@ -5,7 +5,7 @@ passDb.orc = P@ssw0rd
 db.query = select asset_id, asset_name, currency, inst_type, TIME_TO_MATURITY, PRICE, get_date from msci_universe where get_date='2023-01-01'
 db.querySelect = select * from DM_TBL_TEST
 db.queryInsert = INSERT INTO DM_TBL_TEST (BOOK, ISIN, CLEAN_PRICE, DATES) VALUES (?, ?, ?, ?)
-
+db.udpatePrice = UPDATE DM_TBL_TEST SET clean_price = ? *1.10 WHERE dates = ?
 csvFilePath=C:\\Users\\ptap2\\Downloads\\Book1.csv
 
 #DM_TBL_TEST
