--- a/prop_conf/db.properties
+++ b/prop_conf/db.properties
@@ -6,6 +6,8 @@ db.query = select asset_id, asset_name, currency, inst_type, TIME_TO_MATURITY, P
 db.querySelect = select * from DM_TBL_TEST
 db.queryInsert = INSERT INTO DM_TBL_TEST (BOOK, ISIN, CLEAN_PRICE, DATES) VALUES (?, ?, ?, ?)
 db.udpatePrice = UPDATE DM_TBL_TEST SET clean_price = ? *1.10 WHERE dates = ?
+db.selPrice = SELECT clean_price FROM DM_TBL_TEST WHERE dates = ? and isin = ?
+db.updPrice = UPDATE DM_TBL_TEST SET clean_price = ? WHERE dates = ? and isin = ?
 csvFilePath=C:\\Users\\ptap2\\Downloads\\Book1.csv
 
 #DM_TBL_TEST
