--- a/prop_conf/db.properties
+++ b/prop_conf/db.properties
@@ -8,8 +8,8 @@ db.queryInsert = INSERT INTO DM_TBL_TEST (BOOK, ISIN, CLEAN_PRICE, DATES) VALUES
 db.udpatePrice = UPDATE DM_TBL_TEST SET clean_price = ? *1.10 WHERE dates = ?
 db.selPrice = SELECT clean_price FROM DM_TBL_TEST WHERE dates = ? and isin = ?
 db.updPrice = UPDATE DM_TBL_TEST SET clean_price = ? WHERE dates = ? and isin = ?
-csvFilePath=C:\\Users\\ptap2\\Downloads\\Book1.csv
-insCSV=INSERT INTO dm_tbl_test (BOOK, ISIN, CLEAN_PRICE, DATES) VALUES (?, ?, ?, ?)
+csvFilePath=C:\\Users\\ptap2\\Downloads\\epmForTest.csv
+insCSV=INSERT INTO dm_tbl_test (POSITIONS, BOOK, PRODUCT_TYPE, PRODUCT_SUBTYPE, ISIN, CUSIP, FIGI, CLEAN_PRICE) VALUES (?, ?, ?, ?, ?, ?, ?, ?)
 
 #DM_TBL_TEST
 #FileInputStream fis = new FileInputStream("prop_conf/db.properties");
