--- a/prop_conf/db.properties
+++ b/prop_conf/db.properties
@@ -4,7 +4,7 @@ userDb.orc = WEBEAI
 passDb.orc = P@ssw0rd
 db.query = select asset_id, asset_name, currency, inst_type, TIME_TO_MATURITY, PRICE, get_date from msci_universe where get_date='2023-01-01'
 db.querySelect = select * from DM_TBL_TEST
-db.queryInsert = INSERT INTO DM_TBL_TEST (BOOK, ISIN, CLEAN_PRICE, DATES) VALUES (?, ?, ?, ?)
+db.queryInsert = INSERT INTO DM_TBL_TEST (POSITIONS, BOOK, PRODUCT_TYPE, PRODUCT_SUBTYPE, ISIN, CUSIP, FIGI, CLEAN_PRICE) VALUES (?, ?, ?, ?, ?, ?, ?, ?)
 db.udpatePrice = UPDATE DM_TBL_TEST SET clean_price = ? *1.10 WHERE dates = ?
 db.selPrice = SELECT clean_price FROM DM_TBL_TEST WHERE dates = ? and isin = ?
 db.updPrice = UPDATE DM_TBL_TEST SET clean_price = ? WHERE dates = ? and isin = ?
